# packages/backend/routes/usuarioRoutes.js
@@ -1,7 +1,7 @@
 import express from 'express';
 import UsuarioController from '../controllers/usuarioController.js';
 import { validateSchema } from '../middlewares/validateSchema.js';
-import { usuarioPostSchema} from '../schemas/zodSchemas/usuarioSchema.js';
+import { usuarioPostSchema, usuarioPatchSchema } from '../schemas/zodSchemas/usuarioSchema.js';
 import { notificacionPatchSchema } from '../schemas/zodSchemas/notificacionSchema.js';
 
 const usuarioPath = '/usuarios';
@@ -35,6 +35,14 @@ export default function usuarioRoutes(getController) {
     usuarioPath,
     async (req, res, next) => {
       await usuarioController.obtener(req, res, next);
+    }
+  );
+
+  router.patch(
+    usuarioPath + '/:id',
+    validateSchema(usuarioPatchSchema, 'body'),
+    async (req, res, next) => {
+      await usuarioController.actualizar(req, res, next);
     }
   );
 
